force-app/main/default/objects/LogEvent__e/LogEvent__e.object-meta.xml
<CustomObject>
    <description>It is responsible to transfer the logs asynchronously</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>