force-app/main/default/objects/LogEvent__e/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <description>It contains the component name, where the event occurred.</description>
    <label>ComponentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>