force-app/main/default/objects/LogEvent__e/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <description>It contains the component type, which generated this log, it could be apex class, trigger, LWC, Aura, Flow etc..</description>
    <label>Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>