force-app/main/default/objects/LogEvent__e/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>It contains the feature accessed by the user</description>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>