force-app/main/default/objects/LogEvent__e/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <description>contains the logging level i.e. fine, debug, info, warn, error</description>
    <label>LoggingLevel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>