force-app/main/default/objects/LogEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>id of the user, performing the actions</description>
    <label>User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>